# humpty_qss

./: .clang-format  .editorconfig  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  TODO.md
.github/workflows/: build.yml  linux.yml  windows.yml
.vim/: coc-settings.json
cmake/: GenerateQrc.cmake  WinDeployQt.cmake
doc/: Property.md  PseudoElements.md  sub-controls.md
res/: meta_info.rc.in  version_info.h.in
src/: CMakeLists.txt
src/crash_handler/: CMakeLists.txt  CrashHandler.cpp  CrashHandler.hpp
src/crash_handler/res/i10n/: en.ts  zh_CN.ts
src/gui/: ButtonContainer.cpp  ButtonContainer.hpp  CMakeLists.txt  CheckContainer.cpp  CheckContainer.hpp  ComboBoxContainer.cpp  ComboBoxContainer.hpp  Container.cpp  Container.hpp  Container_p.hpp  Functions.cpp  Functions.hpp  GlobalMouseListener.cpp  GlobalMouseListener.hpp  Gui.cpp  GuiCom.cpp  GuiCom.hpp  LineEditContainer.cpp  LineEditContainer.hpp  Main.cpp  MenuContainer.cpp  MenuContainer.hpp  PushButtonContainer.cpp  PushButtonContainer.hpp  ScrollBarContainer.cpp  ScrollBarContainer.hpp  Showcase.cpp  Showcase.hpp  SliderContainer.cpp  SliderContainer.hpp  StateDisplay.cpp  StateDisplay.hpp  TabBarContainer.cpp  TabBarContainer.hpp  TabWidgetContainer.cpp  TabWidgetContainer.hpp  Template.hh  ToolButtonContainer.cpp  ToolButtonContainer.hpp  WidgetContainer.cpp  (+3 more)
src/gui/res/: Gui.qrc  css.qrc
src/gui/res/css/: black.css  gui.css  white.css
src/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/qss_editor/: CMakeLists.txt  QssEditor.cpp  QssEditor.hpp  QssEditorConfig.cpp  QssEditorConfig.hpp  QssEditorHighlighter.cpp  QssEditorHighlighter.hpp  QssEditorPlugin.cpp  QssEditorPlugin.hpp
src/settings/: CMakeLists.txt  Settings.cpp  Settings.hpp
src/translatable/: CMakeLists.txt  Translatable.cpp  Translatable.hpp
src/utils/: CMakeLists.txt  Utils.cpp  Utils.hpp
src/widget/: CMakeLists.txt  Widget.cpp  Widget.hpp
test/: CMakeLists.txt
test/test_qstring/: CMakeLists.txt  test_qstring.cpp
